# RemoteDesk

./: .gitignore  .gitmodules  Cargo.toml  HANDOFF.md  README.md  deny.toml  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
crates/audio/: Cargo.toml
crates/audio/src/: capture.rs  decoder.rs  encoder.rs  lib.rs  playback.rs
crates/codec/: Cargo.toml
crates/codec/src/: decoder.rs  encoder.rs  lib.rs
crates/crypto/: Cargo.toml  build.rs
crates/crypto/src/: lib.rs
crates/input-sim/: Cargo.toml
crates/input-sim/src/: android.rs  lib.rs
crates/network/: Cargo.toml
crates/network/src/: client.rs  host.rs  lib.rs  protocol.rs  rendezvous.rs  udp.rs
crates/rd-common/: Cargo.toml
crates/rd-common/src/: config.rs  error.rs  lib.rs  proto.rs
crates/relay-server/: Cargo.toml
crates/relay-server/src/: main.rs
crates/screen-capture/: Cargo.toml
crates/screen-capture/src/: lib.rs
docs/: architecture.md  capture-apis.md  codecs.md  licensing.md  phase1-results.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs
src/components/: AuthDialog.tsx  ChatPanel.tsx  FileTransferPanel.tsx  RemoteScreen.tsx  SettingsPanel.tsx
src/lib/: tauri.ts
