[workspace]
members = [
    "crates/rd-common",
    "crates/screen-capture",
    "crates/codec",
    "crates/input-sim",
    "crates/network",
    "crates/crypto",
    "crates/audio",
    "crates/relay-server",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/RemoteDesk/RemoteDesk"
authors = ["RemoteDesk Team"]

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"

# Protobuf
protobuf = "3"
protobuf-codegen = "3"

# Cryptography
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

# Platform-specific (conditionally compiled in each crate)
[workspace.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemServices",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
]
