[package]
name = "remote-desk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-platform remote desktop application"
authors.workspace = true

[package.metadata]

[lib]
name = "remote_desk_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"

# Internal crates
rd-common = { path = "../crates/rd-common" }
screen-capture = { path = "../crates/screen-capture", features = ["native"] }
codec = { path = "../crates/codec" }
input-sim = { path = "../crates/input-sim" }
network = { path = "../crates/network" }
