[package]
name = "crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "E2E encryption for RemoteDesk using NaCl/libsodium (sodiumoxide)"

[dependencies]
sodiumoxide = "0.2"
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
