[package]
name = "screen-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-platform screen capture (native GDI/DXGI on Windows, stub elsewhere)"

[features]
native = []
android = []

[dependencies]
rd-common = { path = "../rd-common" }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
